@@ -144,6 +144,7 @@ GW_CHANGELOGS = "- Added Questtarget to the Immersive dialouge (At the End)\n" .
 GW_CHANGELOGS = "- Changed Bag and Bank min sizing\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "- Changed target debuffs to 8 per row\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "- Added option under Skins 'Use Blizzard Class Colors'\n" .. GW_CHANGELOGS
+GW_CHANGELOGS = "- Added Defense stat for Warrior, Druid and Paladin\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "\n\n1.6.2\n\n" .. GW_CHANGELOGS
 
 
