@@ -132,6 +132,54 @@ local function getArmor(unit, prefix)
 end
 GW.stats.getArmor = getArmor
 
+local function getDefense(unit)
+	local numSkills = GetNumSkillLines()
+	local skillIndex = 0
+	local currentHeader = nil
+	local stat
+    local tooltip
+    local tooltip2
+
+	for i = 1, numSkills do
+		local skillName = select(1, GetSkillLineInfo(i))
+		local isHeader = select(2, GetSkillLineInfo(i))
+
+		if isHeader ~= nil and isHeader then
+			currentHeader = skillName
+		else
+			if (currentHeader == CSC_WEAPON_SKILLS_HEADER and skillName == CSC_DEFENSE) then
+				skillIndex = i
+				break
+			end
+		end
+	end
+
+	local skillRank, skillModifier
+	if skillIndex > 0 then
+		skillRank = select(4, GetSkillLineInfo(skillIndex))
+		skillModifier = select(6, GetSkillLineInfo(skillIndex))
+	else
+		-- Use this as a backup, just in case something goes wrong
+		skillRank, skillModifier = UnitDefense(unit) --Not working properly
+	end
+
+	local posBuff = 0
+	local negBuff = 0
+	if skillModifier > 0 then
+		posBuff = skillModifier
+	elseif skillModifier < 0 then
+		negBuff = skillModifier
+	end
+	stat, tooltip = formateStat(DEFENSE_COLON, skillRank, posBuff, negBuff)
+	local valueNum = max(0, skillRank + posBuff + negBuff)
+	tooltip2 = format(DEFAULT_STATDEFENSE_TOOLTIP, valueNum, 0, valueNum * 0.04, valueNum * 0.04)
+	tooltip2 = tooltip2:gsub('.-\n', '', 1)
+	tooltip2 = tooltip2:gsub('%b()', '')
+
+    return stat, tooltip, tooltip2
+end
+GW.stats.getDefense = getDefense
+
 local function getAttackBothHands(unit, prefix)
 	if not unit then
 		unit = "player";
